Inserido sistema de busca de tarefas, ajustes no design de botões, tasks e modal e inserido verificações

--- a/TodoOrganize/src/Pages/Home/Home.css
+++ b/TodoOrganize/src/Pages/Home/Home.css
@@ -12,10 +12,23 @@
 
 .purple-color {
   color: #8758ff;
+  font-family: "Roboto";
+  font-weight: bold;
+  font-size: 30px;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: blue; /* color of the scroll thumb */
   border-radius: 20px; /* roundness of the scroll thumb */
   border: 3px solid orange; /* creates padding around scroll thumb */
+}
+
+.container-pos-ref {
+  position: relative;
+}
+
+.align-self-left {
+  position: absolute;
+  top: 20px;
+  left: 30px;
 }
